is *not* a `Mock` class, the `spec` and `spec_set` arguments are still passed
into the constructor. There is code to avoid trying to set the `return_value`
in these cases (as would normally be done so that the "instance" of a patched
class inherits the spec). Would it make more sense for `spec` and `spec_set`
to be *invalid* (`ValueError`) when a non-Mock class is used with
`new_callable`?


CHANGELOG
=========


2011/XX/XX Version 0.8.0 alpha 2
--------------------------------

* New `new_callable` argument to `patch` and `patch.object` allowing you to
  pass in a class or callable object (instead of `MagicMock`) that will be
  called to replace the object being patched
* Addition of `NonCallableMock` and `NonCallableMagicMock`, mocks without a
  `__call__` method
* Mocks created by `patch` have a `MagicMock` as the `return_value` where a
  class is being patched
* `create_autospec` can create non-callable mocks for non-callable objects.
  `return_value` mocks of classes will be non-callable unless the class has
  a `__call__` method
* `autospec` creates a `MagicMock` without a spec for properties and slot
  descriptors, because we don't know the type of object they return
* Removed the "inherit" argument from `create_autospec`
* BUGFIX: `assert_called_with` / `assert_called_once_with` can be used with
  `self` as a keyword argument
* BUGFIX: autospec for functions / methods with an argument named self that
  isn't the first argument no longer broken
* BUGFIX: when patching a class with an explicit spec / spec_set (not a
  boolean) it applies "spec inheritance" to the return value of the created
  mock (the "instance")
* BUGFIX: remove the `__unittest` marker causing traceback truncation

`MagicMock` is no longer a subclass of `Mock`, but a subclass of
`NonCallableMock` with the callability mixed in.


2011/06/14 Version 0.8.0 alpha 1
--------------------------------

mock 0.8.0 is the last version that will support Python 2.4.
